--- a/index.html
+++ b/index.html
@@ -39,29 +39,18 @@
          <div class="header_bg">
             <div class="container">
                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                  <a class="logo" href="index.html"><img src="https://ik.imagekit.io/w2htiaswc/main_logo.png" width="100"/></a>
+                  <a class="logo" href="index.html">
+                     <img src="https://ik.imagekit.io/w2htiaswc/MAIN%20lOGO.jpg" width="100"/>
+                  </a>
                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                     <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                           <a class="nav-link" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                           <a class="nav-link" href="about.html">About</a>
-                        </li>
-                        <li class="nav-item">
-                           <a class="nav-link" href="contact.html">Contact Us</a>
-                        </li>
-                     </ul>
                      <div class="call_section">
                         <ul>
-                           <li><a href="#"><img src="images/fb-icon.png"/></a></li>
-                           <li><a href="#"><img src="images/twitter-icon.png"/></a></li>
-                           <li><a href="#"><img src="images/linkedin-icon.png"/></a></li>
-                           <li><a href="#"><img src="images/instagram-icon.png"/></a></li>
-                           <div class="donate_bt"><a href="#"><img src="images/search-icon.png"/></a></div>
+                           <li><a href="javascript:void(0)"><img src="images/fb-icon.png"/></a></li>
+                           <li><a href="javascript:void(0)"><img src="images/linkedin-icon.png"/></a></li>
+                           <li><a href="javascript:void(0)"><img src="images/instagram-icon.png"/></a></li>
                         </ul>
                      </div>
                   </div>
@@ -167,7 +156,7 @@
       <!-- copyright section start -->
       <div class="copyright_section">
          <div class="container">
-            <p class="copyright_text">© 2024 All Rights Reserved. <a href="https://cloudnk.com">CloudNK</a></p>
+            <p class="copyright_text">© 2024 All Rights Reserved. <a href="https://thecloudnk.com">CloudNK</a></p>
          </div>
       </div>
       <!-- copyright section end -->
@@ -185,4 +174,3 @@
       <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
    </body>
 </html>
-
